# bambi

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .nojekyll  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CHANGELOG.qmd  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  GOVERNANCE.md  LICENSE  MANIFEST.in  README.md  api_reference.html  bambi_gp_example.ipynb  censoring.ipynb  censoring.py  changelog.html  conf.py  contact.html  env-dev.yml  examples  examples.html  examples.py  faq.html  formula.ipynb  genindex.html  getting_started.html  gp_notes.ipynb  gp_planning.ipynb  gp_playground.ipynb  gp_playground_2.ipynb  gp_playground_groups.ipynb  hsgp_1d.ipynb  hsgp_2d.ipynb  (+23 more)
.doctrees/: api_reference.doctree  environment.pickle  examples.doctree  faq.doctree  index.doctree
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
0.1.5/: .buildinfo  api_reference.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.2.0/: .buildinfo  api_reference.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.3.0/: .buildinfo  api_reference.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.4.0/: .buildinfo  api_reference.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.4.1/: .buildinfo  api_reference.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.5.0/: .buildinfo  api_reference.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.6.0/: .buildinfo  api_reference.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.6.1/: .buildinfo  api_reference.html  examples.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.6.2/: .buildinfo  api_reference.html  examples.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
0.6.3/: .buildinfo  api_reference.html  examples.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.7.0/: .buildinfo  api_reference.html  examples.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.7.1/: .buildinfo  api_reference.html  examples.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.8.0/: .buildinfo  api_reference.html  examples.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
0.9.0/: .buildinfo  api_reference.html  examples.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.9.1/: .buildinfo  api_reference.html  examples.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.9.2/: .buildinfo  api_reference.html  examples.html  faq.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
_modules/: index.html
_sources/: api_reference.rst.txt  examples.rst.txt  getting_started.rst.txt  index.rst.txt
_static/: documentation_options.js
api/: Family.html  Family.qmd  Formula.html  Formula.qmd  Likelihood.html  Likelihood.qmd  Link.html  Link.qmd  Model.html  Model.qmd  Prior.html  Prior.qmd  _sidebar.yml  clear_data_home.html  clear_data_home.qmd  index.html  index.qmd  interpret.comparisons.html  interpret.comparisons.qmd  interpret.plot_comparisons.html  interpret.plot_comparisons.qmd  interpret.plot_predictions.html  interpret.plot_predictions.qmd  interpret.plot_slopes.html  interpret.plot_slopes.qmd  interpret.predictions.html  interpret.predictions.qmd  interpret.slopes.html  interpret.slopes.qmd  load_data.html  load_data.qmd
bambi/: Changelog.md  __init__.py  backends.py  brms.r  config.py  diagnostics.py  formula.py  model_components.py  models.py  posterior_predictive.py  priors.py  results.py  terms.py  transformations.py  utils.py  version.py  version.txt
bambi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
conda-envs/: environment-dev.yml
docs/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  _quarto.yml  api_reference.html  api_reference.rst  changelog.qmd  conf.py  contact.qmd  examples.html  examples.rst  faq.qmd  faq.rst  genindex.html  getting_started.html  getting_started.rst  index.html  index.qmd  index.rst  make.bat  objects.json  post_render.py  pre_render.py  reference.rst  search.html  searchindex.js  styles.css
doctrees/: api_reference.doctree  environment.pickle  examples.doctree  getting_started.doctree  index.doctree
examples/: ANES_logistic_regression.ipynb  Bayesian_Frequentist_Tutorial.ipynb  ESCS_multiple_regression.ipynb  Strack RRR re-analysis.ipynb  about_those_default_priors.ipynb  default_priors.ipynb  shooter_crossed_random_ANOVA.ipynb
html/: .buildinfo
main/: .buildinfo  api_reference.html  examples.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
master/: .buildinfo  api_reference.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
notebooks/: ANES_logistic_regression.html  Bayesian_Frequentist_Tutorial_pymer4.html  ESCS_multiple_regression.html  Strack_RRR_re_analysis.html  Strack_RRR_re_analysis.ipynb  alternative_links_binary.html  alternative_links_binary.ipynb  alternative_samplers.html  bayesian_logistic_regression.html  bayesian_multi-level_regression.html  bayesian_t-test.html  bayesian_t-test.ipynb  beta_regression.html  categorical_regression.html  categorical_regression.ipynb  circular_regression.html  count_roaches.html  distributional_models.html  fixed_random.html  getting_started.html  hierarchical_binomial_bambi.html  horseshoe_prior.html  hsgp_1d.html  (+43 more)
(+1169 files in other folders)
