[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "setuptools_scm>=8"]

[tool.setuptools_scm]

[project]
name = "bambi"
description = "BAyesian Model Building Interface in Python"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
maintainers = [
    { name = "Tomás Capretto", email = "tomicapretto@gmail.com" },
    { name = "Osvaldo Martin", email = "aloctavodia@gmail.com" },
    { name = "Gabriel Stechschulte", email = "stechschulteg@gmail.com" },
    { name = "Ravin Kumar", email = "ravinsdrive@gmail.com" },
]

dependencies = [
    "arviz>=0.20.0",
    "formulae>=0.5.3",
    "graphviz",
    "pandas>=1.0.0",
    #"pymc>=5.25.0",
    "pymc @ git+https://github.com/tomicapretto/pymc.git@var-names_mock-sample" # TEMPORAL
]

[project.optional-dependencies]
dev = [
    "black==25.9.0",
    "pylint==3.3.8",
    "pre-commit==4.3.0",
]
docs = [
    "ipython>=9,<10",
    "quartodoc>=0.11,<0.12",
]
test = [
    "pytest-cov>=7,<8",
    "pytest>=8,<9",
]
jax = [
    "jax>=0.7,<0.8",
    "numpyro>=0.19,<0.20",
    "blackjax>=1.2,<1.3"
]
nutpie = [
    "nutpie>=0.15,<0.16",
    "numba>=0.61.2"
]

[project.urls]
homepage = "https://bambinos.github.io/bambi"
documentation = "https://bambinos.github.io/bambi"
repository = "https://github.com/bambinos/bambi"
changelog = "https://github.com/bambinos/bambi/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = [
    "bambi",
    "bambi.backend",
    "bambi.data",
    "bambi.defaults",
    "bambi.families",
    "bambi.interpret",
    "bambi.priors",
    "bambi.terms",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
addopts = "-p no:warnings"


[tool.pylint.main]
jobs = 0
ignore = ["tests"]
unsafe-load-any-extension = false


[tool.pylint.messages_control]
disable = [
  "cyclic-import",
  "missing-docstring",
  "no-else-return",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-branches",
  "too-many-locals",
  "too-many-statements",
  "use-implicit-booleaness-not-len",
]

[tool.pylint.format]
max-line-length = 100


[tool.pylint.variables]
dummy-variables-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"
ignored-argument-names = "_.*|^ignored_|^unused_"

# [tool.pylint.basic]
good-names = [
    "_",
    "_log",
    "b",
    "i",
    "j",
    "k",
    "m",
    "n",
    "p",
    "q",
    "t",
    "u",
    "x",
    "X",
    "X",
    "y",
    "z",
    "ax",
    "df",
    "dm",
    "lb",
    "mu",
    "nu",
    "ub",
    "eta",
    "Z",
    "X_terms",
    "Z_terms",
]

bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]


[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = false
min-similarity-lines = 50

[tool.pylint.miscellaneous]
notes = ["FIXME", "XXX"]

[tool.pylint.exceptions]
overgeneral-exceptions = ["builtins.Exception"]

[tool.pylint.design]
max-args = 10
max-positional-arguments = 20
max-attributes = 10
max-bool-expr = 5
max-branches = 12
max-locals = 15
max-parents = 7
max-public-methods = 20
max-returns = 6